--- a/suishouji/src/main/res/values/styles.xml
+++ b/suishouji/src/main/res/values/styles.xml
@@ -124,8 +124,8 @@
 
     <style name="common_bg">
         <item name="android:background">@drawable/mymoney_bg</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <!--<style name="Widget.CompoundButton.CheckBox" -->
